apps/media/deluge/exporter.yaml
#
# Reference:
# https://github.com/tobbez/deluge_exporter
#

apiVersion: v1
kind: Service
metadata:
  name: deluge-exporter
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: deluge-exporter
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: deluge-exporter
  type: ClusterIP
  ports:
    - name: metrics
      port: 8011
      protocol: TCP
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge-exporter
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: deluge-exporter
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: deluge-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: deluge-exporter
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: deluge-exporter
          image: docker.io/ngosang/deluge-exporter:1.0.2 # {"$imagepolicy": "media:deluge-exporter"}
          imagePullPolicy: Always
          ports:
            - name: metrics
              containerPort: 8011
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 150Mi
            limits:
              cpu: 150m
              memory: 250Mi
