apps/media/deluge/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deluge-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: deluge-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`deluge.powell.place`)
      kind: Rule
      services:
        - name: deluge
          port: http
      middlewares:
        - name: security
          namespace: kube-system
